--- a/index.html
+++ b/index.html
@@ -1,4 +1,21 @@
-<script src="utils.js"></script>
-<script src="cards.js"></script>
-<script src="state.js"></script>
-<script src="main.js"></script>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width">
+        <title>Castle Duel</title>
+        <link href="https://fonts.googleapis.com/css?family=Signika+Negative:600" rel="stylesheet">
+        <link rel="stylesheet" href="style.css" />
+    </head>
+    <body>
+        <script src="node_modules/vue/dist/vue.js"></script>
+        <script src="node_modules/tweenjs/lib/tweenjs.js"></script>
+
+        <div id="app"></div>
+
+        <!-- Scripts -->
+        <script src="utils.js"></script>
+        <script src="cards.js"></script>
+        <script src="state.js"></script>
+        <script src="main.js"></script>
+    </body>
+</html>
