moving tween js file

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <script src="node_modules/vue/dist/vue.js"></script>
-        <script src="tweenjs/dist/tween.umd.js"></script>
+        <script src="js/tween.umd.js"></script>
 
         <div id="app"></div>
         <script type="text/x-template" id="banner"> <svg viewBox="0 0 20 260">
